[gd_scene load_steps=9 format=2]

[ext_resource path="res://city1.png" type="Texture" id=1]
[ext_resource path="res://Canos.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUB.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]

[sub_resource type="PanoramaSky" id=4]
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 4 )
background_sky_custom_fov = 90.0
background_sky_orientation = Basis( -0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5 )
ambient_light_color = Color( 1, 1, 1, 1 )
fog_color = Color( 0.984375, 0.919658, 0.89978, 1 )
fog_sun_color = Color( 1, 0, 0, 1 )
tonemap_exposure = 2.0
dof_blur_far_distance = 4.91
dof_blur_far_transition = 723.67
dof_blur_far_amount = 0.09
dof_blur_far_quality = 2
glow_enabled = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 0.88
glow_bloom = 1.0
adjustment_enabled = true

[sub_resource type="BoxShape" id=3]

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
light_color = Color( 0, 0, 0, 1 )
light_specular = 1.0
shadow_bias = 0.0

[node name="Canos" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="Timer" type="Timer" parent="Canos"]
wait_time = 12.0
one_shot = true
autostart = true

[node name="Canos2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )

[node name="Timer2" type="Timer" parent="Canos2"]
wait_time = 35.0
one_shot = true
autostart = true

[node name="Canos3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="HUB" parent="." instance=ExtResource( 3 )]

[node name="gerac" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Win" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="gerac2" type="Timer" parent="."]
wait_time = 2.0

[node name="gerac3" type="Timer" parent="."]
wait_time = 2.0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.36962, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0764942, 0 )
shape = SubResource( 3 )
[connection signal="timeout" from="Canos/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Canos2/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="gerac" to="." method="_on_gerac_timeout"]
[connection signal="timeout" from="Win" to="." method="_on_Win_timeout"]
[connection signal="timeout" from="gerac2" to="." method="_on_gerac2_timeout"]
[connection signal="timeout" from="gerac3" to="." method="_on_gerac3_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
